<resources>
    <string name="app_name">Media Monitor</string>
    <string name="app_short_name">Media Monitor</string>

    <string name="title_activity_main">Sources</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_articles">Articles</string>
    <string name="title_activity_monitor">Monitor</string>

    <!--Values related to Login and Registration with Firebase-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered for a Media Monitor account now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!--Values related to Main-->
    <string name="main_hint_vendor">Vendor</string>
    <string name="main_keywords_primary">Add Primary Keyword</string>
    <string name="main_keywords_secondary">Add Secondary Keyword</string>
    <string name="main_btn_save">Save</string>
    <string name="main_tv_primary">Primary</string>
    <string name="main_tv_secondary">Secondary</string>
    <string name="main_tv_source">Source</string>
    <string name="main_tv_category">Category</string>

    <!--Values related to Monitor-->
    <string name="monitor_tv_vendor">Vendor</string>
    <string name="monitor_tv_source">Source</string>
    <string name="monitor_btn_process">Process</string>
    <string name="monitor_tv_primary">Primary</string>
    <string name="monitor_tv_secondary">Secondary</string>
    <string name="monitor_rb_positive">Positive</string>
    <string name="monitor_rb_negative">Negative</string>
    <string name="monitor_rb_neutral">Neutral</string>
    <string name="monitor_tv_results">Results</string>
    <string name="monitor_tv_report">Monitoring Report</string>

    <!--Nav drawer-->
    <string name="navigation.action.open">Open navigation drawer</string>
    <string name="navigation.action.close">Close navigation drawer</string>
    <string name="navigation.header.title">Media Monitor</string>
    <string name="navigation.content.main">Main</string>
    <string name="navigation.content.articles">Articles</string>
    <string name="navigation.content.monitor">Monitor</string>
    <string name="navigation.content.profile">Profile</string>

    <!--Messages-->
    <string name="msg_app_exit">Are you sure you want to exit?</string>
    <string name="msg_select_source">Please, select a news source</string>
    <string name="msg_select_category">Please, select category</string>
    <string name="msg_add_vendor">Please, add vendor name</string>
    <string name="msg_config_saved">Configuration saved successfully!</string>
    <string name="msg_processing">Articles processed successfully!</string>

    <!--Models-->
    <string name="md_source_name">Name</string>
    <string name="md_source_description">Description</string>
    <string name="md_source_url">Url</string>
    <string name="md_source_category">Category</string>
    <string name="md_article_title">Title</string>
    <string name="md_article_author">Author</string>
    <string name="md_article_description">Description</string>
    <string name="md_article_url">To Article</string>
    <string name="md_article_date">Publish Date</string>

    <!--Dialogs-->
    <string name="dialog_title_filter">Filter</string>
    <string name="dialog_filter_category">by Category:</string>
    <string name="dialog_filter_name">News Source:</string>
    <string name="dialog_filter_hint_category">category</string>
    <string name="dialog_filter_hint_name">name</string>
    <string name="dialog_title_select_source">Select Source</string>
    <string name="dialog_select_source">Select config source</string>
    <string name="dialog_select_config">Select monitoring config</string>

    <string name="button.cancel">Cancel</string>
    <string name="button.positive">OK</string>
    <string name="button.send">Send</string>
    <string name="button.ignore">Ignore</string>
    <string name="button.yes">Yes</string>
    <string name="button.no">No</string>

    <!--Bottom navigation-->
    <string name="bottom_nav_workspace">Workspace</string>
    <string name="bottom_nav_results">Results</string>


</resources>
