<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFilterCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_filter_category"
            android:textSize="@dimen/font_normal"/>

        <AutoCompleteTextView
            android:id="@+id/acCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dialog_filter_hint_category"
            android:textSize="@dimen/font_normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFilterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_filter_name"
            android:textSize="@dimen/font_normal"/>

        <AutoCompleteTextView
            android:id="@+id/acName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/dialog_filter_hint_name"
            android:textSize="@dimen/font_normal" />

    </LinearLayout>

</LinearLayout>