<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardElevation="3dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:contentPadding="@dimen/spacing_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/container_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/progress_circular" />

            <ImageView
                android:id="@+id/ivFeatured"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_background"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_image"
            android:text="@string/md_article_title"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:text="@string/md_article_author"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAuthor"
            android:text="@string/md_article_description"
            android:textSize="@dimen/font_normal" />

        <LinearLayout
            android:id="@+id/container_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/tvDescription">

            <TextView
                android:id="@+id/tvUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/md_article_url"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/md_article_date"
                android:textSize="@dimen/font_normal" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>