<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_gravity="center"
    card_view:cardElevation="3dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:contentPadding="@dimen/spacing_small">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/container_header"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/ivHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_background" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/spacing_small"
                android:text="@string/md_source_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_header"
            android:ellipsize="end"
            android:maxLines="3"
            android:minLines="1"
            android:text="@string/md_source_description"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:autoLink="web"
            android:text="@string/md_source_url"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/shape_label_rounded"
            android:gravity="center"
            android:text="@string/md_source_category"
            android:textColor="@color/secondaryColor"
            android:textSize="@dimen/font_normal" />

        <Button
            android:id="@+id/btnSelect"
            style="@style/NormalButton.PrimaryPositiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="Select" />

    </RelativeLayout>

</android.support.v7.widget.CardView>

